--- a/notebooks/prediction_viewer.ipynb
+++ b/notebooks/prediction_viewer.ipynb
@@ -61,11 +61,11 @@
     }
    ],
    "source": [
-    "\n",
     "MODEL_DIR = Path(\"../pretrained/soccernet_rgb\")\n",
     "FRAME_DIR = Path(\"../frames/short_5fps\")\n",
     "DATASET = \"soccernetv2\"\n",
     "PRED_PREFIX = \"pred-test.140\"\n",
+    "SPLIT = \"test\"\n",
     "\n",
     "DEFAULT_TOP_K = 5\n",
     "DEFAULT_EVENT_WINDOW = 30\n",
@@ -73,6 +73,18 @@
     "print(f\"Model dir: {MODEL_DIR}\")\n",
     "print(f\"Frame dir: {FRAME_DIR}\")\n",
     "print(f\"Dataset: {DATASET}\")\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "ef18e690",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "\n",
+    "with open(Path(\"..\") / \"data\" / DATASET / f\"{SPLIT}.json\") as fp:\n",
+    "    split_metadata = {entry['video']: entry for entry in json.load(fp)}\n"
    ]
   },
   {
@@ -538,13 +550,15 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "\n",
     "import pandas as pd\n",
     "\n",
     "TABLE_VIDEO = video_options[0]\n",
-    "TABLE_EVENTS_SOURCE = pred_events  # or pred_events_high_recall\n",
+    "TABLE_EVENTS_SOURCE = pred_events  # use pred_events_high_recall for dense events\n",
     "TABLE_MIN_SCORE = 0.0\n",
     "\n",
-    "video_fps = split_data.videos[split_data._video_idxs[TABLE_VIDEO]][2]\n",
+    "meta = split_metadata.get(TABLE_VIDEO)\n",
+    "video_fps = meta.get('fps', 1.0) if meta else 1.0\n",
     "rows = []\n",
     "for event in TABLE_EVENTS_SOURCE.get(TABLE_VIDEO, []):\n",
     "    score = event.get('score', float('nan'))\n",
@@ -561,7 +575,7 @@
     "if not rows:\n",
     "    display(Markdown(f\"No events found for `{TABLE_VIDEO}`.\"))\n",
     "else:\n",
-    "    display(pd.DataFrame(rows))"
+    "    display(pd.DataFrame(rows))\n"
    ]
   }
  ],
