notebooks/prediction_viewer.ipynb

--- a/notebooks/prediction_viewer.ipynb
+++ b/notebooks/prediction_viewer.ipynb
@@ -89,6 +89,21 @@
   },
   {
    "cell_type": "code",
+   "execution_count": null,
+   "id": "f807f121",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "\n",
+    "ground_truth_events = {\n",
+    "    video: entry.get('events', [])\n",
+    "    for video, entry in split_metadata.items()\n",
+    "}\n",
+    "print(f\"Loaded ground-truth events for {len(ground_truth_events)} video(s).\")\n"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": 18,
    "id": "bea71542",
    "metadata": {},
@@ -576,6 +591,104 @@
     "    display(Markdown(f\"No events found for `{TABLE_VIDEO}`.\"))\n",
     "else:\n",
     "    display(pd.DataFrame(rows))\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "4d25231f",
+   "metadata": {},
+   "source": [
+    "### Timeline plot"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "308d56de",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "\n",
+    "TIMELINE_VIDEO = video_options[0]\n",
+    "TIMELINE_TOLERANCE = 10  # frames\n",
+    "\n",
+    "pred_list = pred_events.get(TIMELINE_VIDEO, [])\n",
+    "hr_list = pred_events_high_recall.get(TIMELINE_VIDEO, []) if pred_events_high_recall else []\n",
+    "label_map = ground_truth_events.get(TIMELINE_VIDEO, [])\n",
+    "max_frame = video_lengths[TIMELINE_VIDEO]\n",
+    "\n",
+    "plt.figure(figsize=(12, 3))\n",
+    "if label_map:\n",
+    "    plt.scatter([e['frame'] for e in label_map], [1]*len(label_map), c='green', marker='|', label='GT events')\n",
+    "if pred_list:\n",
+    "    plt.scatter([e['frame'] for e in pred_list], [0.6]*len(pred_list), c='red', marker='x', label='Predicted events')\n",
+    "if hr_list:\n",
+    "    plt.scatter([e['frame'] for e in hr_list], [0.3]*len(hr_list), c='orange', marker='.', alpha=0.4, label='High-recall events')\n",
+    "plt.yticks([])\n",
+    "plt.xlim(0, max_frame)\n",
+    "plt.xlabel('Frame')\n",
+    "plt.title(f'Timeline for {TIMELINE_VIDEO}')\n",
+    "plt.legend(loc='upper right')\n",
+    "plt.show()\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "5284016a",
+   "metadata": {},
+   "source": [
+    "### Per-class precision/recall (tolerance matching)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "f6c8eb24",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "\n",
+    "import pandas as pd\n",
+    "\n",
+    "PRECISION_RECALL_TOLERANCE = 10\n",
+    "\n",
+    "all_labels = sorted({\n",
+    "    e['label']\n",
+    "    for events in ground_truth_events.values()\n",
+    "    for e in events\n",
+    "} | set(class_id_to_name.values()))\n",
+    "\n",
+    "rows = []\n",
+    "for label in all_labels:\n",
+    "    tp = fp = fn = 0\n",
+    "    for video in video_options:\n",
+    "        gt = [e for e in ground_truth_events.get(video, []) if e['label'] == label]\n",
+    "        preds = [e for e in pred_events.get(video, []) if e['label'] == label]\n",
+    "        matched = set()\n",
+    "        for pred in preds:\n",
+    "            hit = False\n",
+    "            for idx, g in enumerate(gt):\n",
+    "                if idx in matched:\n",
+    "                    continue\n",
+    "                if abs(pred['frame'] - g['frame']) <= PRECISION_RECALL_TOLERANCE:\n",
+    "                    matched.add(idx)\n",
+    "                    hit = True\n",
+    "                    break\n",
+    "            if hit:\n",
+    "                tp += 1\n",
+    "            else:\n",
+    "                fp += 1\n",
+    "        fn += len(gt) - len(matched)\n",
+    "    if tp == fp == fn == 0:\n",
+    "        continue\n",
+    "    precision = tp / (tp + fp) if (tp + fp) else 0.0\n",
+    "    recall = tp / (tp + fn) if (tp + fn) else 0.0\n",
+    "    rows.append({'Label': label, 'TP': tp, 'FP': fp, 'FN': fn, 'Precision': precision, 'Recall': recall})\n",
+    "\n",
+    "if rows:\n",
+    "    display(pd.DataFrame(rows))\n",
+    "else:\n",
+    "    display(Markdown('No overlapping labels between predictions and ground truth.'))\n"
    ]
   }
  ],
