notebooks/prediction_viewer.ipynb

--- a/notebooks/prediction_viewer.ipynb
+++ b/notebooks/prediction_viewer.ipynb
@@ -690,6 +690,50 @@
     "else:\n",
     "    display(Markdown('No overlapping labels between predictions and ground truth.'))\n"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "883a265d",
+   "metadata": {},
+   "source": [
+    "### Example frame for a selected label"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "4471a2e8",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "\n",
+    "EXAMPLE_LABEL = \"Indirect free-kick\"\n",
+    "EXAMPLE_MIN_SCORE = 0.5\n",
+    "EXAMPLE_USE_HIGH_RECALL = False\n",
+    "\n",
+    "source = pred_events_high_recall if EXAMPLE_USE_HIGH_RECALL and pred_events_high_recall else pred_events\n",
+    "match = None\n",
+    "for video in video_options:\n",
+    "    for event in sorted(source.get(video, []), key=lambda e: e['score'], reverse=True):\n",
+    "        if event['label'] == EXAMPLE_LABEL and event.get('score', 0.0) >= EXAMPLE_MIN_SCORE:\n",
+    "            match = (video, event)\n",
+    "            break\n",
+    "    if match:\n",
+    "        break\n",
+    "\n",
+    "if not match:\n",
+    "    display(Markdown(f\"No events found for `{EXAMPLE_LABEL}` meeting the score threshold.\"))\n",
+    "else:\n",
+    "    video, event = match\n",
+    "    display(Markdown(f\"Showing **{EXAMPLE_LABEL}** in `{video}` at frame {event['frame']} (score {event.get('score', float('nan')):.3f}).\"))\n",
+    "    display_prediction(\n",
+    "        video,\n",
+    "        event['frame'],\n",
+    "        top_k=DEFAULT_TOP_K,\n",
+    "        event_window=DEFAULT_EVENT_WINDOW,\n",
+    "        show_high_recall=EXAMPLE_USE_HIGH_RECALL,\n",
+    "    )\n"
+   ]
   }
  ],
  "metadata": {
